content/external/Floss/css/main.css
html {
  width: 100%;
  height: 100%;
  /*background-color: #fc6e94; original colour do me e67d0d */
  background-color: #fc6e94;

  /* shadedEdges.png was taken from https://orteil.dashnet.org Thank you orteil for all the cool stuff you make <3 */
  background-image: url(shadedEdges.png);
  background-size: 100% 100%, auto;

  font-family: 'Century Gothic', sans-serif;
}

/*
yes no buttons
*/


.ContentContainer {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;

  top: 10%;
  height: 75%;
  width: 100%;

  flex-direction: column;


}



#LoginButton {
  height: 30px;
  width: 75px;
  background-color: #ffcdc6;
  border: 0px solid #66524f;
  top: 1%;
  position: relative;

}

input {
  margin: 2px;
  padding: 12px;
  border: 0px solid #66524f;
  background-color: #ffcdc6;

  border-radius: 20px;

}

.MainTitle {
  font-size: 150%;
  position: absolute;
  display: flex;
  justify-content: center;
  top: 5%;
}

.buttonContainer {
  position: absolute;
  justify-content: center;
  align-items: center;
  display: flex;
  justify-content: space-between;

  padding-top: 130px;
  width: 100%;


  bottom: 0%;
}



#YesButton {
  background-color: #77dd77;

}

#NoButton {
  background-color: #ff6961;

}

img {
  position: absolute;

  height: 50%;
  top: 35%;
  
  margin-left: 10px;
  margin-right: 10px;
  border-radius: 20px;

}

/* image stage */
#imageTitle {
  position: absolute;
  display: flex;
  justify-content: center;
  top: 15%;
  width: 100%;
  font-size: 130%;
  font-weight: bold;
  color: #fff;
  text-shadow: 2px 2px 4px #000000;
  padding-left: 20px;
  padding-right: 20px;
  overflow-wrap: break-word;

}

#ProceedButton {
  background-color: #94fc6e;
  height: 30px;
  width: 100px;
  bottom: 0%;
  position: absolute;
}

button {
  font-size: large;
  width: 50%;
  height: 40%;
  margin-left: 10px;
  margin-right: 10px;
  border-radius: 20px;
  font-weight: bold;
  border: 0px solid #66524f;

  color: #181818;
  text-shadow: 2px 2px 4px #fc6e94;
}



br,
.noSelect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

body {
  overflow: hidden;
  font-weight: bold;

}


/* main game stuff */
.centerSection {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;

  left: 20%;
  right: 20%;
  height: 100%;
  /*padding: 20px*/
}

.Game {
  top: 32px;
  position: absolute;
  left: 0px;

  right: 0px;
  bottom: 0px;
  overflow: hidden;

  justify-content: center;
  align-items: center;
}

#canvas {
  position: absolute;

  outline: black 3px solid;


}


.body {
  font-size: large;
}


* {
  /*
   border: solid 1px rgb(161, 0, 161);
*/
}


#Header {
  left: 0%;
  right: 0%;
  height: 32px;
  top: 0;
  width: 100%;
  background-image: url("noiseBG.png");
  background-size: contain;
  background-color: #333;
  color: #fff;
  margin-top: 0%;
  text-align: center;
  position: absolute;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;

}

.Title {
  display: inline-block;
  position: relative;
}


a {
  color: #138eaa;
  text-shadow: rgb(255, 0, 255);
}

footer {
  left: 0%;
  right: 0%;
  height: 32px;
  bottom: 0;
  width: 100%;
  background-image: url("noiseBG.png");
  background-size: contain;

  background-color: #333;
  color: #fff;
  margin-top: 0%;
  text-align: center;
  position: absolute;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

